# ipcam_sdk

./: .gitignore  CMakeLists.txt
demo/: QnRtmp.c  len.h265  main.c  mock_anjia.c
fdk-aac/: configure
rtmpsdk/: rtmp_publish.c  rtmp_publish.h
test/: fileinput.c  fileinput.h  test.c
